--- a/cvnt/pyproject.toml
+++ b/cvnt/pyproject.toml
@@ -12,6 +12,8 @@ flask-sqlalchemy = "^3.1.1"
 psycopg2-binary = "^2.9.9"
 flask-wtf = "^1.2.1"
 flask-bootstrap = "^3.3.7.1"
+protobuf = "^5.26.1"
+grpcio-tools = "^1.62.2"
 
 
 [build-system]
