--- a/cvnt/pyproject.toml
+++ b/cvnt/pyproject.toml
@@ -14,6 +14,7 @@ flask-wtf = "^1.2.1"
 flask-bootstrap = "^3.3.7.1"
 protobuf = "^5.26.1"
 grpcio-tools = "^1.62.2"
+flask-login = "^0.6.3"
 
 
 [build-system]
