--- a/cvnt/pyproject.toml
+++ b/cvnt/pyproject.toml
@@ -15,6 +15,7 @@ flask-bootstrap = "^3.3.7.1"
 protobuf = "^5.26.1"
 grpcio-tools = "^1.62.2"
 flask-login = "^0.6.3"
+requests = "^2.31.0"
 
 
 [build-system]
