--- a/C2_Server/pyproject.toml
+++ b/C2_Server/pyproject.toml
@@ -13,6 +13,7 @@ flask-sqlalchemy = "^3.1.1"
 psycopg2-binary = "^2.9.9"
 requests = "^2.31.0"
 protobuf = "3.20.0"
+docker = "^7.0.0"
 
 
 [build-system]
