--- a/cvnt/pyproject.toml
+++ b/cvnt/pyproject.toml
@@ -16,6 +16,7 @@ protobuf = "^5.26.1"
 grpcio-tools = "^1.62.2"
 flask-login = "^0.6.3"
 requests = "^2.31.0"
+datetime = "^5.5"
 
 
 [build-system]
