--- a/cvnt/pyproject.toml
+++ b/cvnt/pyproject.toml
@@ -17,6 +17,7 @@ grpcio-tools = "^1.62.2"
 flask-login = "^0.6.3"
 requests = "^2.31.0"
 datetime = "^5.5"
+ip2geotools = "^0.1.6"
 
 
 [build-system]
