making sure everythings up to date

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "readf.h": "c",
         "pb_decode.h": "c",
         "debug.h": "c",
-        "pb.h": "c"
-    }
+        "pb.h": "c",
+        "implant.pb.h": "c"
+    },
+    "makefile.configureOnOpen": true
 }
